# sftp-aws-cdk-infra

./: .gitignore  README.md  app.py  main.py  pyproject.toml  sftp-aws-cdk-infra_README_final.md
sftp_stack/: sftp_stack.py
